# ask-system

./: CMakeLists.txt  README.md
components/include/: ask.hpp  question.hpp  thread.hpp  user.hpp
components/src/: ask.cpp  question.cpp  thread.cpp  user.cpp
src/: ask_main.cpp  questions.txt  users.txt
src/system/: system.cpp  system.hpp
